--- a/views/team.jade
+++ b/views/team.jade
@@ -77,6 +77,8 @@ block content
 						th Vulturing Team
 					-else
 						th Player's Team
+					-if(!isInbound)
+						th Giving Up
 					th Deadline
 				tbody
 					-each v in array
@@ -88,6 +90,9 @@ block content
 									mixin teamLink(teamHash[v.vulture.vulture_team], false)
 								-else
 									mixin teamLink(teamHash[v.history[0].fantasy_team], false)
+							-if(!isInbound)
+								td
+									a.hiddenLink(href="/player/" + v.givingUpPlayer._id)= v.givingUpPlayer.name_display_first_last
 							td= moment(v.vulture.deadline).calendar()
 
 	section(id="top")
@@ -95,8 +100,7 @@ block content
 			h1= team.fullName
 			p= message
 
-	section(id="left" style="width:60%")
-		= config.historicalPage
+	section(id="left" style="width:65%")
 		div
 			p Last Year's Roster:
 				a(style="padding-left:20px" href="/team/" + team.teamId + "/2013") 2013
@@ -133,14 +137,13 @@ block content
 						a(href="/admin/player/" + trade.from.players[i])= trade.from.player_names[i]
 					- }
 					br
-
-	section(id="right")
 		div
 			-if((in_vultures && in_vultures.length > 0) || (out_vultures && out_vultures.length > 0))
 				h2 Vultures
 				mixin vulture(in_vultures, "Vultures on " + team.team + "'s Players", true)
 				mixin vulture(out_vultures, "Vultures made by " + team.team, false)
 
+	section(id="right")
 		div
 			h2 Finances
 			mixin cash(team, cash, null, config)
