--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -9,7 +9,6 @@ block inlineScripts
 			var player = data.player;
 			var message = data.message;
 			$("#player_" + player + "_message").append("<tr><td>" + message + "</td></tr>");
-			alert(data);
 		});
 
 		var fix = function(_id) {
@@ -32,6 +31,7 @@ block content
 			h3 Come back after the start of the season to see vultures.
 	-else
 		section(id="top")
+			p= vulture_message
 			h2 Open Vultures
 			-if(openVultures.length == 0)
 				p You have no open vultures
@@ -58,8 +58,8 @@ block content
 									td= moment(player.vulture.deadline).calendar()
 									-if(player.history[0].fantasy_team == user.team)
 										td
-											input(type="button" value="Click to Fix" onclick="fix('" + player.player_id + "')")
-								tr(id="player_" + player.player_id + "_message")
+											input(type="button" value="Click to Fix" onclick="fix('" + player._id + "')")
+								tr(id="player_" + player._id + "_message")
 		section(id="left" style="width:600px")
 			-if(user)
 				h2 Your Vulturable Players
@@ -80,8 +80,8 @@ block content
 									td.status= player.status_code
 									td.status= player.fantasy_status_code
 									td
-										input(type="button" value="Click to Fix" onclick="fix('" + player.player_id + "')")
-								tr(id="player_" + player.player_id + "_message")
+										input(type="button" value="Click to Fix" onclick="fix('" + player._id + "')")
+								tr(id="player_" + player._id + "_message")
 		section(id="right")
 			h2 Leaguewide Vulturable Players
 			table
