--- a/views/team.jade
+++ b/views/team.jade
@@ -146,7 +146,7 @@ block content
 	section(id="right")
 		div
 			h2 Finances
-			mixin cash(team, cash, null, config)
+			mixin cash(team, cash, config)
 
 		div
 			h2 Minor League Draft Picks
