--- a/views/trade.jade
+++ b/views/trade.jade
@@ -128,7 +128,7 @@ block inlineScripts
 			var itemTeam = item.substring(0,1);
 			var dropTeam = $(ev.target).closest('div').attr('team');
 			if(itemTeam != dropTeam) {
-				var newRow = "<tr><td>" + $('#' + item).attr('itemtext') + "</td></tr>";
+				var newRow = "<tr><td>" + $('#' + item).attr('itemtext') + "</td><td>Swap?<input type='checkbox'/></tr>";
 				$($(ev.target).parent().parent()).prepend(newRow) ;
 				$('#' + item).remove();
 			}
@@ -147,7 +147,7 @@ block content
 		p Picks
 		mixin draftPicks(from.team, from.picks, teamHash, true)
 		p Cash
-		mixin cash(from.team, from.cash, null, config)
+		mixin cash(from.team, from.cash, config, true)
 
 	section(id="center" style="float:left;margin:0px;text-align:center")
 		input(type="button" value="Submit Trade" onclick="submitTrade(" + from.team.teamId + "," + to.team.teamId + ")")
@@ -206,7 +206,7 @@ block content
 		p Picks
 		mixin draftPicks(to.team, to.picks, teamHash, true)
 		p Cash
-		mixin cash(to.team, to.cash, null, config)
+		mixin cash(to.team, to.cash, config, true)
 
 	div(id="dummyTradeObj" style="display:none;text-align:left")
 		p(style="display:inline-block;margin-right:30px")
