--- a/views/trade2.jade
+++ b/views/trade2.jade
@@ -29,6 +29,15 @@ block inlineScripts
 					} else {
 						obj.amount = amount;
 					}
+				} else {
+					var swap = $('#' + obj.id).find('input[type="checkbox"]').is(':checked');
+					if(swap) {
+						obj.swap = { swappable : true };
+						var note = $('#' + obj.id).find('input[type="text"]').val();
+						if(note.length > 0 && note !== "Enter swap qualifiers here") {
+							obj.swap.note = note;
+						}
+					}
 				}
 			});
 			var tradeJson = JSON.stringify(tradePayload);
@@ -98,8 +107,6 @@ block inlineScripts
 					tradeObject.cashType = row.attr('cashType');
 					
 				} else {
-					newRow.find('.pickText').text(row.attr('itemtext'));
-					
 					tradeObject.originalTeam = row.attr('original_team'); 
 					tradeObject.year = row.attr('year'); 
 					tradeObject.round = row.attr('round');
@@ -133,6 +140,15 @@ block inlineScripts
 				var oldId = item.substring(1);
 				$('#' + oldId).show();
 				$('#' + item).remove();
+			}
+		}
+
+		function toggleSwap(button) {
+			if(button.checked) {
+				$(button).parent().parent().find('input[type="text"]').css('display','');
+
+			} else {
+				$(button).parent().parent().find('input[type="text"]').css('display','none');
 			}
 		}
 		
@@ -184,10 +200,16 @@ block content
 				td(class="text")
 				td
 					= "Swap: "
-					input(type="checkbox")
+					input(type="checkbox" onclick="toggleSwap(this)")
+				td
+					input(type="text" style="display:none" value="Enter swap qualifiers here")
 
-	-if(tradePayload.length)
-		| <script type="text/javascript" >
+	| <script type="text/javascript" >
+	| var fromTeam = !{JSON.stringify(from.team)};
+	| var toTeam = !{JSON.stringify(to.team)};
+	| var fromPicks = !{from.jsonPicks};
+	| var toPicks = !{to.jsonPicks};
+	-if(tradePayload.length)		
 		| var tradePayload = !{JSON.stringify(tradePayload)}[0];
 		| prepopulateOldTrade();
-		| </script>
+	| </script>
