--- a/views/admin.jade
+++ b/views/admin.jade
@@ -106,7 +106,7 @@ block content
 				input#password(type='password', name='password')
 				br
 				label(for='team') Team
-				input#team(type='text' name='team')
+				input#team(type='text' name='teamId')
 				br
 				input(type="submit", value="Sign Up")
 		div
