--- a/views/profile.jade
+++ b/views/profile.jade
@@ -8,7 +8,7 @@ block content
 		h1= user.firstName + " " + user.lastName
 		
 		p(style="display:inline-block;padding-right:20px") Team:
-		a(href="/team/"+team.team style="display:inline-block")= team.fullName
+		a(href="/team/"+team.teamId style="display:inline-block")= team.fullName
 		
 		br
 
